--- a/src/style.css
+++ b/src/style.css
@@ -1,12 +1,17 @@
-* {
+body,
+html {
+  height: 100%;
   margin: 0;
-  padding: 0;
+  display: flex;
+  justify-content: center;
+  /* Horizontally center */
+  align-items: center;
+  /* Vertically center */
 }
+
 #chart-container {
-  position: relative;
   width: 1000px;
   height: 1000px;
-  overflow: hidden;
 }
 
 
